[ADD]Http基础设施搭建

--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelFriend.Windows.Http\TravelFriend.Windows.Http.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\Close.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
