--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -14,6 +14,7 @@
     <None Remove="Resources\DropUp.png" />
     <None Remove="Resources\LoginAccount.png" />
     <None Remove="Resources\LoginPassword.png" />
+    <None Remove="Resources\Logo.png" />
     <None Remove="Resources\Min.png" />
     <None Remove="Resources\Min_Green.png" />
     <None Remove="Resources\zhangzhier.png" />
@@ -48,6 +49,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\LoginPassword.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Min.png">
