[ADD]对接登录接口及主界面和登陆界面之间的交互

--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -16,6 +16,7 @@
     <None Remove="Resources\Gray\Max.png" />
     <None Remove="Resources\Gray\Message.png" />
     <None Remove="Resources\Gray\Min.png" />
+    <None Remove="Resources\Gray\NoMax.png" />
     <None Remove="Resources\Gray\Search.png" />
     <None Remove="Resources\Gray\Setting.png" />
     <None Remove="Resources\Gray\ToggleDown.png" />
@@ -65,6 +66,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\Min.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Gray\NoMax.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\Search.png">
