[ADD]添加sqlite作为本地数据库

--- a/TravelFriend.Windows.Database/TravelFriend.Windows.Database.csproj
+++ b/TravelFriend.Windows.Database/TravelFriend.Windows.Database.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
   </ItemGroup>
 
 </Project>
