--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -12,6 +12,7 @@
     <None Remove="Resources\DefaultBigAvatar.png" />
     <None Remove="Resources\DropDown.png" />
     <None Remove="Resources\DropUp.png" />
+    <None Remove="Resources\famale.png" />
     <None Remove="Resources\Gray\Close.png" />
     <None Remove="Resources\Gray\Max.png" />
     <None Remove="Resources\Gray\Message.png" />
@@ -32,6 +33,7 @@
     <None Remove="Resources\LoginAccount.png" />
     <None Remove="Resources\LoginPassword.png" />
     <None Remove="Resources\Logo.png" />
+    <None Remove="Resources\male.png" />
     <None Remove="Resources\Min.png" />
     <None Remove="Resources\Min_Green.png" />
     <None Remove="Resources\Team.png" />
@@ -57,6 +59,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\DefaultBigAvatar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\famale.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\Close.png">
@@ -123,6 +128,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\male.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Min.png">
