[ADD]对接消息系统基础设施

--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TravelFriend.Windows.Database\TravelFriend.Windows.Database.csproj" />
     <ProjectReference Include="..\TravelFriend.Windows.Http\TravelFriend.Windows.Http.csproj" />
+    <ProjectReference Include="..\TravelFriend.Windows.RabbitMQ\TravelFriend.Windows.RabbitMQ.csproj" />
   </ItemGroup>
 
   <ItemGroup>
