--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -21,6 +21,7 @@
     <None Remove="Resources\Gray\NoMax.png" />
     <None Remove="Resources\Gray\Search.png" />
     <None Remove="Resources\Gray\Setting.png" />
+    <None Remove="Resources\Gray\Team.png" />
     <None Remove="Resources\Gray\ToggleDown.png" />
     <None Remove="Resources\Gray\ToggleUp.png" />
     <None Remove="Resources\Green\Birthday.png" />
@@ -89,6 +90,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\Setting.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Gray\Team.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\ToggleDown.png">
