--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -15,10 +15,12 @@
     <None Remove="Resources\famale.png" />
     <None Remove="Resources\Gray\Close.png" />
     <None Remove="Resources\Gray\Delete.png" />
+    <None Remove="Resources\Gray\Left.png" />
     <None Remove="Resources\Gray\Max.png" />
     <None Remove="Resources\Gray\Message.png" />
     <None Remove="Resources\Gray\Min.png" />
     <None Remove="Resources\Gray\NoMax.png" />
+    <None Remove="Resources\Gray\Right.png" />
     <None Remove="Resources\Gray\Search.png" />
     <None Remove="Resources\Gray\Setting.png" />
     <None Remove="Resources\Gray\Team.png" />
@@ -27,8 +29,11 @@
     <None Remove="Resources\Green\Birthday.png" />
     <None Remove="Resources\Green\Close.png" />
     <None Remove="Resources\Green\Home.png" />
+    <None Remove="Resources\Green\Left.png" />
     <None Remove="Resources\Green\Logo.png" />
     <None Remove="Resources\Green\Min.png" />
+    <None Remove="Resources\Green\Return.png" />
+    <None Remove="Resources\Green\Right.png" />
     <None Remove="Resources\Green\Signature.png" />
     <None Remove="Resources\Green\Team.png" />
     <None Remove="Resources\Green\Travel.png" />
@@ -42,6 +47,7 @@
     <None Remove="Resources\Team.png" />
     <None Remove="Resources\Travel.png" />
     <None Remove="Resources\zhangzhier.png" />
+    <None Remove="Team\TeamDetail" />
   </ItemGroup>
 
   <ItemGroup>
@@ -74,6 +80,9 @@
     <Resource Include="Resources\Gray\Delete.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Gray\Left.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Gray\Max.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -84,6 +93,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\NoMax.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Gray\Right.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Gray\Search.png">
@@ -116,6 +128,9 @@
     <Resource Include="Resources\Green\Home.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Green\Left.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Green\LoginAccount.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -126,6 +141,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Green\Min.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Green\Return.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Green\Right.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Green\Signature.png">
@@ -162,6 +183,9 @@
 
   <ItemGroup>
     <Compile Update="Main\SettingPopup.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Team\TeamPage - 复制.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
