[ADD]增加获取团队头像、团队头像通知观察者，团队功能舍弃本地缓存，但代码保留

--- a/TravelFriend.Windows.RabbitMQ/TravelFriend.Windows.RabbitMQ.csproj
+++ b/TravelFriend.Windows.RabbitMQ/TravelFriend.Windows.RabbitMQ.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath></OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="RabbitMQ.Client" Version="6.0.0" />
   </ItemGroup>
