--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -14,6 +14,7 @@
     <None Remove="Resources\Add.png" />
     <None Remove="Resources\Close.png" />
     <None Remove="Resources\DefaultBigAvatar.png" />
+    <None Remove="Resources\DefaultTeamAvatar.png" />
     <None Remove="Resources\DropDown.png" />
     <None Remove="Resources\DropUp.png" />
     <None Remove="Resources\famale.png" />
@@ -73,6 +74,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\DefaultBigAvatar.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\DefaultTeamAvatar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\famale.png">
