--- a/TravelFriend.Windows/TravelFriend.Windows.csproj
+++ b/TravelFriend.Windows/TravelFriend.Windows.csproj
@@ -39,6 +39,7 @@
     <None Remove="Resources\Green\Close.png" />
     <None Remove="Resources\Green\Home.png" />
     <None Remove="Resources\Green\Left.png" />
+    <None Remove="Resources\Green\Loading.png" />
     <None Remove="Resources\Green\Logo.png" />
     <None Remove="Resources\Green\Min.png" />
     <None Remove="Resources\Green\Pause.png" />
@@ -162,6 +163,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Green\Left.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Green\Loading.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Green\LoginAccount.png">
